<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dude, Where\'s My Friend?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">Built by</string>
    <string name="parse">Oliver, Brian, Joel</string>
    <string name="slogan">...Pls Halp, I\'m Lost...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="log_out">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="home_screen_title">Your Groups</string>
    <string name="logout_button">Logout</string>
    <string name="action_create_group">Create Group</string>
    <string name="title_activity_new_group">NewGroupActivity</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="blog_post_label">Enter your group name</string>
    <string name="user_post_label">Enter post</string>
    <string name="title_activity_nfcgroup">NFCGroupActivity</string>
    <string name="title_activity_post_list">PostListActivity</string>
    <string name="action_add_user">Add User To Group</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_new_user_post">NewUserPostActivity</string>
    <string name="action_return_to_groups">Return</string>
    <string name="title_activity_show_map">ShowMapActivity</string>
    <string name="user_post_description">Enter description</string>

</resources>